perf: implement P0 optimizations (P0-1 ~ P0-4) and fix Dockerfile MAVEN_OPTS
- P0-1 DistWorkerCoProc.batchDist: eliminate per-topic AtomicInteger and
  CompletableFuture chaining by collecting tasks upfront and batching
  deliverExecutorGroup.submit() after all route lookups complete.

- P0-2 BatchDeliveryCall: use clear() instead of rebuild on abort, replace
  nested HashSet<MatchInfo> with ArrayList + linear scan dedup to reduce
  allocation in the delivery hot path.

- P0-3 InboxStoreCoProc.fetchFromInbox: introduce getDirect() API returning
  nullable ByteString to eliminate Optional<ByteString> boxing in the
  inbox fetch loop. Propagates through IKVSpaceReader, IKVRangeReader and
  all implementations (RocksDB, InMem, KVRangeReader, LoadRecordableKVReader).

- P0-4 RocksDBKVSpaceWriterHelper: track deletedKeys per WriteBatch to
  avoid redundant singleDelete tombstones when the same key is written
  multiple times within one batch, reducing WAL/compaction write amplification.

- Fix Dockerfile.build and GitHub Actions workflow: rename MAVEN_OPTS build
  arg to MAVEN_CLI_OPTS to prevent mvnw from treating Maven profile flags
  as JVM options.

- Update PERF_OPTIMIZATION_TODOLIST.md with completed status and additional
  already-improved items from earlier commits.